@@ -1,5 +1,6 @@
 package com.aluminate.aluminate_global_backend.service.email;
 
+import com.aluminate.aluminate_global_backend.controller.AuthController;
 import jakarta.mail.MessagingException;
 import jakarta.mail.internet.MimeMessage;
 import org.springframework.beans.factory.annotation.Value;
@@ -10,13 +11,17 @@ import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.util.logging.Logger;
 
 @Service
 public class EmailService {
 
     private final JavaMailSender mailSender;
+    private static final Logger logger = Logger.getLogger(AuthController.class.getName());
+
     @Value("${spring.mail.username}")
     private String fromAddress;
 
@@ -35,6 +40,7 @@ public class EmailService {
     }
 
     public void sendOtpMail(String to, String otp) throws MessagingException, IOException {
+        logger.info("Sending OTP to " + to + " with OTP: " + otp);
         MimeMessage mimeMessage = mailSender.createMimeMessage();
         MimeMessageHelper helper = new MimeMessageHelper(mimeMessage, true, "UTF-8");
         helper.setFrom(fromAddress);
@@ -45,12 +51,15 @@ public class EmailService {
         htmlContent = htmlContent.replace("{{OTP}}", otp);
         helper.setText(htmlContent, true);
         mailSender.send(mimeMessage);
+        logger.info("mail sent huray!");
     }
 
     public String getHtmlTemplate(String path) throws IOException {
         ClassPathResource resource = new ClassPathResource(path);
-        byte[] bytes = Files.readAllBytes(resource.getFile().toPath());
-        return new String(bytes, StandardCharsets.UTF_8);
+        try (InputStream is = resource.getInputStream()) {
+            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        }
     }
+
 
 }
